[project]
name = "doomscrawl"
version = "0.1.0"
description = "Procedural dungeon generator utilising Delauney triangulation to find sane connections between rooms"
authors = [
    {name = "Visa Lehtimäki",email = "642229+ramla@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "invoke (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.1,<8.0.0)"
]
[tool.pytest.ini_options]
testpaths = ["src/test"]
pythonpath = ["src"]
